--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ build/
 ### VS Code ###
 .vscode/
 src/main/resources/application.properties
+src/main/kotlin/com/springboot/riot/global/RiotApiKey.kt
